<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">CmsG01</string>

    <!--앱 권한-->

    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="app_version">앱 버전</string>
    <string name="permission_msg">권한을 불허하면 서비스를 사용할 수 없습니다.\n\n[설정] > [권한] 에서 권한을 허용하여 주십시오.</string>
    <string name="permission_msg2">권한을 허용하지 않으면 서비스를 사용할 수 없습니다.\n\n앱을 종료하시겠습니까?</string>
    <string name="app_finish">종료</string>
    <string name="permission_setting">퍼미션 설정</string>
    <string name="gps_off">GPS가 꺼져있습니다.</string>
    <string name="check_gps">GPS설정 확인</string>
    <string name="move_gps">앱을 이용하시려면 GPS기능을 켜야 합니다. 이동하시겠습니까?</string>

    <!--인트로화면 설명-->
    <string name="explanation">-설명-</string>
    <string name="ex1">1. 앱을 시작하기 전 게이트웨이 장비를 켜주세요.</string>
    <string name="ex2">2. 게이트웨이 장비의 PARING 버튼을 눌러주세요.\n    (누르고 30초까지 스캔 가능합니다.)</string>
    <string name="ex3">3. 1번, 2번 사항을 완료하였으면 하단의\n    확인 버튼을 눌러주세요.</string>
    <string name="precaution">※주의사항※\n\n2.4GHz WiFi 연결만을 지원합니다.\n게이트웨이 입력작업이 끝났으면\n앱을 종료해주십시요.</string>
    <string name="ok">확인</string>

    <!--메인-->
    <string name="gateway_not_connected">게이트웨이 연결 안됨</string>
    <string name="gateway_connected">게이트웨이 연결 됨</string>
    <string name="compatibility">※ 5G WIFI 는 호환되지 않습니다. ※</string>
    <string name="enter_information">정보 입력</string>
    <string name="check_information">정보 확인</string>
    <string name="gateway_search">게이트웨이 검색</string>
    <string name="gateway_is_not_connected">게이트웨이가 연결되지 않았습니다.</string>
    <string name="cms_gateway_setting_app">CMS게이트웨이 설정 앱</string>
    <string name="description">사용하실 공유기(WiFi)\n정보를 입력바랍니다.</string>
    <string name="only_2.4GHz">주의 : 본 제품은 2.4GHz WiFi연결만을 지원합니다.\n</string>
    <string name="mqtt_caution">주의 : MQTT변경시 작동이 안될 수 있습니다.</string>
    <string name="mqtt_setting">MQTT 변경</string>
    <string name="connecting">연결중입니다...</string>
    <!--메시지-->
    <string name="msg_finish_message">한번 더 누르면 종료 됩니다.</string>

    <!--입력 프로그레스바-->

    <!--IP 입력 메시지-->
    <string name="input_progress_ip_input_0_percent">\n\n\nSECURITY 정보 입력 중...\n(0%)</string>
    <!--IP 입력 메시지-->
    <string name="input_progress_ip_input_10_percent">\n\n\nSSID 정보 입력 중...\n(10%)</string>
    <!--IP PW 입력 메시지-->
    <string name="input_progress_ip_pw_input_40_percent">\n\n\nWIFI 패스워드 입력 중...\n(40%)</string>
    <!--MQTT IP 입력 메시지-->
    <string name="input_progress_mqtt_ip_input_70_percent">\n\n\nMQTT IP 입력 중...\n(70%)</string>
    <!--정보 입력 실패 메시지-->
    <string name="input_progress_fail_input_msg">\n[통신 실패]\n\n게이트웨이와 통신이 원활하지 않아\n정보입력이 이루어지지 않았습니다.\n재연결 버튼을 눌러 다시 시도해주세요.</string>
    <!--정보 입력 성공 메시지-->
<!--    <string name="input_progress_success_input_msg">\n\n정보 입력에 성공하였습니다.\n재입력을 원하시면 스캐너 찾기를 눌러서\n스캐너를 다시 연결해주세요.</string>-->
    <string name="input_progress_success_input_msg">\n[설정 완료]\n\n설정을 성공하셨습니다!\n이제 게이트웨이에 빨간불이 사라지면\nCMS 모니터링이 가능합니다.\ncms2.choistec.com\n에 접속하여 사용하시면 됩니다.</string>
    <!--스캐너 검색창-->
    <string name="close">닫기</string>
    <!--스캐너 타이틀 메시지-->
    <string name="pairing_info">게이트웨이의 페어링 버튼을 눌러주세요</string>
    <string name="scan_title_msg">잠시후 "CMSGateway"가\n검색되면 선택 해주세요</string>
    <string name="re_connection">재연결</string>

    <!--스캐너 정보-->

    <!--스캐너 정보 타이틀-->
    <string name="scan_info_title">게이트웨이 정보</string>
    <string name="login_title">로그인</string>
    <string name="user_id_txt">아이디</string>
    <string name="user_pwd_txt">비밀번호</string>

</resources>
