<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="#F2F2F2">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <ImageView
                android:layout_alignParentRight="true"
                android:id="@+id/setting_view"
                android:background="@drawable/stting"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/lgn_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login_title"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8">
                <TextView
                    android:id="@+id/id_txt"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id_txt"/>
                <EditText
                    android:id="@+id/id_edit_txt"
                    android:layout_marginTop="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/id_txt"/>
                <TextView
                    android:id="@+id/pwd_txt"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/id_edit_txt"
                    android:text="@string/user_pwd_txt"/>
                <EditText
                    android:id="@+id/pwd_edit_txt"
                    android:layout_marginTop="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:password="true"
                    android:layout_height="40dp"
                    android:layout_below="@id/pwd_txt"/>
                <Button
                    android:layout_below="@+id/pwd_edit_txt"
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:layout_weight="16">

        </LinearLayout>
    </LinearLayout>
    <include
        layout="@layout/navi"/>

</androidx.drawerlayout.widget.DrawerLayout>
